frontend/src/assets/style.scss
@use "themes/variables" as *;
@use "themes/mixins" as *;

body,
html {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  background-color: $dark;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  color: $white;
}

p {
  margin: 0;
}

a {
  text-decoration: none;
}

.cursor-pointer {
  cursor: pointer;
}

.hide-scrollbar::-webkit-scrollbar {
  display: none;
}

.hide-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.btn-primary {
  background-color: $primary;
  border: none;
  outline: none;
  color: $white;
  padding: 10px 15px;
  border-radius: 8px;
  font-weight: 600;
  font-size: 1.2rem;

  &:disabled {
    opacity: 1;
  }
}

.btn-outline-primary {
  border: 1px solid $primary;
  border-radius: 8px;
  color: $white;
  padding: 8px 15px;
  font-size: 1.2rem;
  font-weight: 600;
}

.login-page {
  width: 100%;
  height: 100vh;
  background-color: $dark;
  @include flex-center;

  .login-card {
    width: 600px;
    border: 1px solid $border-color;
    border-radius: 15px;
    flex-direction: column;
    @include flex-center;
    padding: 40px 80px;
  }
}

.register-page {
  width: 100%;
  height: 100vh;
  @include flex-center;

  .register-card {
    width: 800px;
    border: 1px solid $border-color;
    border-radius: 15px;
    flex-direction: column;
    @include flex-center;
    padding: 20px 40px;
  }
}

.card-body {
  padding: 2rem;
  @media (max-width: 768px) {
    padding: 1rem !important;
  }
}

.theme-input {
  margin-bottom: 10px;

  .form-control {
    width: 100%;
    padding: 0.8rem;
    border: none;
    outline: none;
    border-radius: 0.5rem;
    background-color: #1f003a;
    font-size: 1.1rem;
    color: $white;

    &::placeholder {
      color: #bbb;
      font-size: 1.1rem;
    }
  }
  .error-text {
    color: red;
    font-size: 0.9rem;
  }
}

.passwordToggleCont {
  position: relative;
}

.toggle-password {
  position: absolute;
  top: 70%;
  right: 10px;
  transform: translateY(-50%);
  cursor: pointer;
}

// common background for all pages

.pageContainer {
  width: 100%;
  height: 100vh;
  background-color: $dark;
  color: $white;
  @include flex-center;

  @media (max-width: 768px) {
    flex-direction: column;
  }

  .login-card {
    width: 600px;
    border: 1px solid $border-color;
    border-radius: 15px;
    flex-direction: column;
    @include flex-center;
    padding: 40px 80px;
  }

  .formContainer {
    h2 {
      font-size: 2.5rem;
      font-weight: 600;

      @media (max-width: 768px) {
        font-size: 2rem;
      }
      @media (max-width: 568px) {
        font-size: 1.8rem;
      }
    }
  }
}

.card-body {
  width: 100%;
  height: 100%;
  padding: 2rem;
  @include flex-center;
}

.chatBox {
  .messageBox {
    max-width: 60%;
    padding: 0px 8px;
    border-radius: 10px;
    word-break: break-word;

    .messageContent {
      padding: 0.5rem;
    }

    &.myMessage {
      background-color: $messageColor2;
      border-top-right-radius: 0;
    }

    &.otherMessage {
      background-color: $messageColor;
      border-top-left-radius: 0;
    }
  }
}

.sidebarChatList {
  width: 500px;
  @media (max-width: 768px) {
    width: 100%;
    position: absolute;
    z-index: 10;
    background: $dark;
  }
}

.mobileFull {
  width: 100%;
  height: 100vh;
  transition: all 0.3s ease;
}

.chatArea {
  flex: 1;

  @media (max-width: 768px) {
    width: 100%;
  }
}

